--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="400" prefWidth="600"
           vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal"
-          fx:controller="org.loose.fis.registration.example.controllers.RegistrationController">
+          fx:controller="org.loose.fis.transport.application.controllers.RegistrationController">
   <padding>
     <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
   </padding>
@@ -26,8 +26,20 @@
   <ChoiceBox fx:id="role" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
   </ChoiceBox>
 
+  <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+
+  <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+
+  <Label text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+
+  <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+
+  <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+
+  <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+
   <Text fx:id="registrationMessage" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
-  <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
+  <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="8">
     <Button onAction="#handleRegisterAction" text="Register"/>
   </HBox>
 </GridPane>
