--- a/src/main/resources/CreateTrip.fxml
+++ b/src/main/resources/CreateTrip.fxml
@@ -52,12 +52,18 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="addButton" layoutX="59.0" layoutY="498.0" mnemonicParsing="false" onAction="#handleAddButton" prefHeight="45.0" prefWidth="149.0" text="Add" />
-      <Button fx:id="deleteButton" layoutX="59.0" layoutY="566.0" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="45.0" prefWidth="149.0" text="Delete" />
+      <Button fx:id="addButton" layoutX="59.0" layoutY="532.0" mnemonicParsing="false" onAction="#handleAddButton" prefHeight="45.0" prefWidth="149.0" text="Add" />
+      <Button fx:id="deleteButton" layoutX="59.0" layoutY="599.0" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="45.0" prefWidth="149.0" text="Delete" />
       <Button fx:id="deliveriesAndTripsButton" layoutX="426.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleDeliveriesAndTripsButton" prefHeight="45.0" prefWidth="119.0" text="Deliveries and trips" />
       <Button fx:id="logoutButton" layoutX="698.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="45.0" prefWidth="119.0" text="Logout" />
       <Button fx:id="editVehiclesButton" layoutX="565.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleEditVehiclesButton" prefHeight="45.0" prefWidth="119.0" text="Edit Vehicles" />
       <Button fx:id="seeRequestsButton" layoutX="285.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleSeeRequestsButton" prefHeight="45.0" prefWidth="119.0" text="See requests" />
       <Text fx:id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
+      <TextField fx:id="route" layoutX="59.0" layoutY="492.0" />
+      <Label layoutX="59.0" layoutY="459.0" prefHeight="33.0" prefWidth="149.0" text="Route">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
