--- a/src/main/resources/selectTrip.fxml
+++ b/src/main/resources/selectTrip.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="250.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.SelectTripController">
    <children>
       <Button fx:id="backButton" layoutX="235.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="47.0" prefWidth="85.0" text="Back" />
       <Button fx:id="requestSpotButton" layoutX="235.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleRequestSpotButton" prefHeight="47.0" prefWidth="85.0" text="Request spot" />
-      <TextArea fx:id="textArea" layoutX="14.0" layoutY="19.0" prefHeight="200.0" prefWidth="200.0" />
+      <Text fx:id="someText" layoutX="5.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.8033676147461" />
    </children>
 </AnchorPane>
