--- a/src/main/resources/approveRequests.fxml
+++ b/src/main/resources/approveRequests.fxml
@@ -12,6 +12,6 @@
       <Text fx:id="deliveries" layoutX="368.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="178.8033676147461" />
       <Button fx:id="denyDelivery" layoutX="581.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleDenyDelivery" prefHeight="47.0" prefWidth="85.0" text="Deny" />
       <Button fx:id="approveDelivery" layoutX="581.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleApproveDelivery" prefHeight="47.0" prefWidth="85.0" text="Approve" />
-      <Button fx:id="backButton" layoutX="325.0" layoutY="233.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="47.0" prefWidth="85.0" text="Back" />
+      <Button fx:id="backButton" layoutX="325.0" layoutY="233.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="47.0" prefWidth="85.0" text="Home" />
    </children>
 </AnchorPane>
