--- a/src/main/resources/selectDelivery.fxml
+++ b/src/main/resources/selectDelivery.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.TextField?>
-
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="305.0" prefWidth="363.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.SelectDeliveryController">
    <children>
@@ -18,5 +18,6 @@
       <TextField fx:id="additionalInformation" layoutX="14.0" layoutY="261.0" />
       <Button fx:id="backButton" layoutX="215.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="49.0" prefWidth="115.0" text="Back" />
       <Button fx:id="requestDeliveryButton" layoutX="215.0" layoutY="156.0" mnemonicParsing="false" onAction="#handleRequestDeliveryButton" prefHeight="49.0" prefWidth="115.0" text="Request Delivery" />
+      <Text fx:id="TEXT" layoutX="66.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="230.13671875" />
    </children>
 </AnchorPane>
