--- a/src/main/resources/pastDeliveries.fxml
+++ b/src/main/resources/pastDeliveries.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="630.0" prefWidth="855.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.PastBookingsController">
+<AnchorPane prefHeight="630.0" prefWidth="855.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.PastDeliveriesController">
    <children>
       <TableView fx:id="table" layoutX="47.0" layoutY="94.0" prefHeight="494.0" prefWidth="762.0">
         <columns>
           <TableColumn fx:id="colVehicleType" prefWidth="103.0" text="Vehicle type" />
             <TableColumn fx:id="colPickupAdress" minWidth="0.0" prefWidth="158.0" text="Pickup Adress" />
             <TableColumn fx:id="colDeliveryAdress" prefWidth="161.0" text="Delivery Address" />
-            <TableColumn fx:id="colAditionalInformation" prefWidth="195.0" text="Aditional information" />
+            <TableColumn fx:id="colAditionalInformation" prefWidth="195.0" text="Additional information" />
             <TableColumn fx:id="colStatus" prefWidth="144.0" text="Status" />
         </columns>
       </TableView>
