--- a/src/main/resources/allBookings.fxml
+++ b/src/main/resources/allBookings.fxml
@@ -30,7 +30,7 @@
                <TableColumn fx:id="colStatus2" prefWidth="144.0" text="Status" />
            </columns>
        </TableView>
-      <Button fx:id="backButton" layoutX="656.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Back" />
+      <Button fx:id="backButton" layoutX="656.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Home" />
       <Text fx:id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
       <Label layoutX="14.0" layoutY="74.0" text="Past trips">
          <font>
@@ -45,5 +45,6 @@
             <Font size="19.0" />
          </font>
       </Label>
+      <Button fx:id="allButton" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleAllButton" prefHeight="45.0" prefWidth="119.0" text="All" />
    </children>
 </AnchorPane>
