--- a/src/main/resources/selectTrip.fxml
+++ b/src/main/resources/selectTrip.fxml
@@ -6,8 +6,8 @@
 
 <AnchorPane prefHeight="250.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.SelectTripController">
    <children>
-      <Button fx:id="backButton" layoutX="235.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="47.0" prefWidth="85.0" text="Back" />
-      <Button fx:id="requestSpotButton" layoutX="235.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleRequestSpotButton" prefHeight="47.0" prefWidth="85.0" text="Request spot" />
-      <Text fx:id="someText" layoutX="5.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.8033676147461" />
+      <Button fx:id="backButton" id="backButton" layoutX="235.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="47.0" prefWidth="85.0" text="Back" />
+      <Button fx:id="requestSpotButton" id="requestSpotButton" layoutX="235.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleRequestSpotButton" prefHeight="47.0" prefWidth="85.0" text="Request spot" />
+      <Text fx:id="someText" id="text" layoutX="5.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.8033676147461" />
    </children>
 </AnchorPane>
