--- a/src/main/resources/selectDelivery.fxml
+++ b/src/main/resources/selectDelivery.fxml
@@ -8,16 +8,16 @@
 
 <AnchorPane prefHeight="305.0" prefWidth="363.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.SelectDeliveryController">
    <children>
-      <TextField fx:id="pickupAddress" layoutX="14.0" layoutY="82.0" />
+      <TextField fx:id="pickupAddress" id="pickupAddress" layoutX="14.0" layoutY="82.0" />
       <Label layoutX="14.0" layoutY="51.0" prefHeight="25.0" prefWidth="115.0" text="Pickup Address" />
       <Label layoutX="14.0" layoutY="118.0" prefHeight="25.0" prefWidth="115.0" text="Vehicle Type" />
-      <TextField fx:id="vehicleType" layoutX="14.0" layoutY="143.0" />
+      <TextField fx:id="vehicleType" id="vehicleType" layoutX="14.0" layoutY="143.0" />
       <Label layoutX="14.0" layoutY="180.0" prefHeight="25.0" prefWidth="115.0" text="Delivery Address" />
       <Label layoutX="14.0" layoutY="235.0" prefHeight="25.0" prefWidth="128.0" text="Additional information" />
-      <TextField fx:id="deliveryAddress" layoutX="14.0" layoutY="200.0" />
-      <TextField fx:id="additionalInformation" layoutX="14.0" layoutY="261.0" />
-      <Button fx:id="backButton" layoutX="215.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="49.0" prefWidth="115.0" text="Back" />
-      <Button fx:id="requestDeliveryButton" layoutX="215.0" layoutY="156.0" mnemonicParsing="false" onAction="#handleRequestDeliveryButton" prefHeight="49.0" prefWidth="115.0" text="Request Delivery" />
-      <Text fx:id="TEXT" layoutX="66.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="230.13671875" />
+      <TextField fx:id="deliveryAddress" id="deliveryAddress" layoutX="14.0" layoutY="200.0" />
+      <TextField fx:id="additionalInformation" id="additionalInformation" layoutX="14.0" layoutY="261.0" />
+      <Button fx:id="backButton" id="backButton" layoutX="215.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="49.0" prefWidth="115.0" text="Back" />
+      <Button fx:id="requestDeliveryButton" id="requestDeliveryButton" layoutX="215.0" layoutY="156.0" mnemonicParsing="false" onAction="#handleRequestDeliveryButton" prefHeight="49.0" prefWidth="115.0" text="Request Delivery" />
+      <Text fx:id="TEXT" id="text" layoutX="66.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="230.13671875" />
    </children>
 </AnchorPane>
