--- a/src/main/resources/CreateTrip.fxml
+++ b/src/main/resources/CreateTrip.fxml
@@ -22,16 +22,16 @@
             <TableColumn fx:id="colRoute" prefWidth="116.0" text="Route" />
         </columns>
       </TableView>
-      <TextField fx:id="vehicleType" layoutX="59.0" layoutY="201.0" />
-      <TextField fx:id="space" layoutX="59.0" layoutY="259.0" />
-      <TextField fx:id="date" layoutX="59.0" layoutY="317.0" />
+      <TextField fx:id="vehicleType" id="vehicletype" layoutX="59.0" layoutY="201.0" />
+      <TextField fx:id="space" id="space" layoutX="59.0" layoutY="259.0" />
+      <TextField fx:id="date" id="date" layoutX="59.0" layoutY="317.0" />
       <Label layoutX="59.0" layoutY="168.0" prefHeight="33.0" prefWidth="125.0" text="Vehicle type">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="time" layoutX="59.0" layoutY="376.0" />
-      <TextField fx:id="price" layoutX="59.0" layoutY="434.0" />
+      <TextField fx:id="time" id="time" layoutX="59.0" layoutY="376.0" />
+      <TextField fx:id="price" id="price" layoutX="59.0" layoutY="434.0" />
       <Label layoutX="59.0" layoutY="226.0" prefHeight="33.0" prefWidth="149.0" text="Space">
          <font>
             <Font size="18.0" />
@@ -52,14 +52,14 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="addButton" layoutX="59.0" layoutY="532.0" mnemonicParsing="false" onAction="#handleAddButton" prefHeight="45.0" prefWidth="149.0" text="Add" />
-      <Button fx:id="deleteButton" layoutX="59.0" layoutY="599.0" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="45.0" prefWidth="149.0" text="Delete" />
-      <Button fx:id="deliveriesAndTripsButton" layoutX="426.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleDeliveriesAndTripsButton" prefHeight="45.0" prefWidth="119.0" text="Deliveries and trips" />
-      <Button fx:id="logoutButton" layoutX="698.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="45.0" prefWidth="119.0" text="Logout" />
-      <Button fx:id="editVehiclesButton" layoutX="565.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleEditVehiclesButton" prefHeight="45.0" prefWidth="119.0" text="Edit Vehicles" />
-      <Button fx:id="seeRequestsButton" layoutX="285.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleSeeRequestsButton" prefHeight="45.0" prefWidth="119.0" text="See requests" />
-      <Text fx:id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
-      <TextField fx:id="route" layoutX="59.0" layoutY="492.0" />
+      <Button fx:id="addButton" id="add" layoutX="59.0" layoutY="532.0" mnemonicParsing="false" onAction="#handleAddButton" prefHeight="45.0" prefWidth="149.0" text="Add" />
+      <Button fx:id="deleteButton" id="delete" layoutX="59.0" layoutY="599.0" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="45.0" prefWidth="149.0" text="Delete" />
+      <Button fx:id="deliveriesAndTripsButton" id="deliveriesandtrips" layoutX="426.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleDeliveriesAndTripsButton" prefHeight="45.0" prefWidth="119.0" text="Deliveries and trips" />
+      <Button fx:id="logoutButton" id="logout" layoutX="698.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="45.0" prefWidth="119.0" text="Logout" />
+      <Button fx:id="editVehiclesButton" id="meansoftransport" layoutX="565.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleEditVehiclesButton" prefHeight="45.0" prefWidth="119.0" text="Edit Vehicles" />
+      <Button fx:id="seeRequestsButton" id="seerequests" layoutX="285.0" layoutY="80.0" mnemonicParsing="false" onAction="#handleSeeRequestsButton" prefHeight="45.0" prefWidth="119.0" text="See requests" />
+      <Text fx:id="TEXT" id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
+      <TextField fx:id="route" id="route" layoutX="59.0" layoutY="492.0" />
       <Label layoutX="59.0" layoutY="459.0" prefHeight="33.0" prefWidth="149.0" text="Route">
          <font>
             <Font size="18.0" />
