--- a/src/main/resources/pastDeliveries.fxml
+++ b/src/main/resources/pastDeliveries.fxml
@@ -19,8 +19,8 @@
             <TableColumn fx:id="colStatus" prefWidth="144.0" text="Status" />
         </columns>
       </TableView>
-      <Button fx:id="backButton" layoutX="691.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Back" />
-      <Text fx:id="TEXT" layoutX="185.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
+      <Button fx:id="backButton" id="backButton" layoutX="691.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Back" />
+      <Text fx:id="TEXT" id="text" layoutX="185.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
       <Label layoutX="47.0" layoutY="39.0" text="Past deliveries">
          <font>
             <Font size="19.0" />
