--- a/src/main/resources/allBookings.fxml
+++ b/src/main/resources/allBookings.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="900" prefWidth="900" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.transport.application.controllers.AllBookingsController">
    <children>
-      <TableView fx:id="table" layoutX="14.0" layoutY="102.0" prefHeight="251.0" prefWidth="762.0">
+      <TableView fx:id="table" id="table" layoutX="14.0" layoutY="102.0" prefHeight="251.0" prefWidth="762.0">
         <columns>
           <TableColumn fx:id="colVehicleType" prefWidth="93.0" text="Vehicle type" />
             <TableColumn fx:id="colSpace" minWidth="0.0" prefWidth="76.0" text="Space" />
@@ -30,21 +30,21 @@
                <TableColumn fx:id="colStatus2" prefWidth="144.0" text="Status" />
            </columns>
        </TableView>
-      <Button fx:id="backButton" layoutX="656.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Home" />
-      <Text fx:id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
+      <Button fx:id="backButton" id="back" layoutX="656.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Home" />
+      <Text fx:id="TEXT" id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
       <Label layoutX="14.0" layoutY="74.0" text="Past trips">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
-      <Button fx:id="pendingButton" layoutX="520.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePendingButton" prefHeight="45.0" prefWidth="119.0" text="Pending" />
-      <Button fx:id="deniedButton" layoutX="384.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDeniedButton" prefHeight="45.0" prefWidth="119.0" text="Denied" />
-      <Button fx:id="approvedButton" layoutX="248.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleApprovedButton" prefHeight="45.0" prefWidth="119.0" text="Approved" />
+      <Button fx:id="pendingButton" id="pending" layoutX="520.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePendingButton" prefHeight="45.0" prefWidth="119.0" text="Pending" />
+      <Button fx:id="deniedButton" id="denied" layoutX="384.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDeniedButton" prefHeight="45.0" prefWidth="119.0" text="Denied" />
+      <Button fx:id="approvedButton" id="approved" layoutX="248.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleApprovedButton" prefHeight="45.0" prefWidth="119.0" text="Approved" />
       <Label layoutX="14.0" layoutY="353.0" text="Past Deliveries">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
-      <Button fx:id="allButton" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleAllButton" prefHeight="45.0" prefWidth="119.0" text="All" />
+      <Button fx:id="allButton" id="all" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleAllButton" prefHeight="45.0" prefWidth="119.0" text="All" />
    </children>
 </AnchorPane>
