--- a/src/main/resources/pastBookings.fxml
+++ b/src/main/resources/pastBookings.fxml
@@ -21,8 +21,8 @@
             <TableColumn fx:id="colStatus" prefWidth="142.0" text="Status" />
         </columns>
       </TableView>
-      <Button fx:id="backButton" layoutX="691.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Back" />
-      <Text fx:id="TEXT" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
+      <Button fx:id="backButton" id="backButton" layoutX="691.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="45.0" prefWidth="119.0" text="Back" />
+      <Text fx:id="TEXT" id="text" layoutX="59.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="189.0" />
       <Label layoutX="47.0" layoutY="39.0" text="Past trips">
          <font>
             <Font size="19.0" />
